# static_visitor_calculator

./: .gitignore  CMakeLists.txt  main.cpp  parser.cpp  parser.hpp  readme.md  rerun.sh  tokenizer.cpp  tokenizer.hpp
libraries/: CMakeLists.txt
libraries/common/: CMakeLists.txt
libraries/common/include/common/: exceptions.hpp
libraries/dynamic_implementation/: CMakeLists.txt
libraries/dynamic_implementation/include/dynamic_implementation/: token_types.hpp  visitor.hpp  visitors.hpp
libraries/fc_implementation/: CMakeLists.txt
libraries/fc_implementation/include/fc_implementation/: token_types.hpp  visitors.hpp
libraries/std_implementation/: CMakeLists.txt
libraries/std_implementation/include/std_implementation/: token_types.hpp  visitors.hpp
