add_library(fc_implementation INTERFACE)
target_include_directories(fc_implementation INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/fc_implementation/)
target_link_libraries(fc_implementation INTERFACE common)
install(TARGETS fc_implementation DESTINATION lib)
install(FILES visitors.hpp DESTINATION include)